--- a/test_site.html
+++ b/test_site.html
@@ -8,20 +8,27 @@
     <script src="http://code.highcharts.com/highcharts.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
     <script src="http://code.highcharts.com/highcharts.js"></script>
+    <style>
+      .header
+      {
+        font-family:"verdana";
+        color:#FFA71A;
+        background-color:#76766e;
+      }
+      .container
+      {
+        background-color:#76766e;
+      }
+    </style>
     <script>
         // makes an array for our data to go in
         var dataarray = [];
         // grabs the data file
         $.get('data.json',function(data){
-          // define grab the lines out of the data object
-          var lines = data.rows;
           // grab each line & aggregate accordingly
-         for(var i=0; i<lines.length;i++){
-            var line = lines[i];
-            if(line.doc.os=="ubuntu"){
+         for(var i=0; i<500;i++){
               // put the data in the dataarray, [x,y] or [timestamp, usercount]
-              dataarray.push([line.doc.timestamp*1000,line.doc.users*1]);
-            }
+              dataarray.push([i,i+500]);
           }
           //console.log(dataarray[0]);
           // make chart
@@ -40,7 +47,7 @@
               // title of axis
               title: 'Time',
               // specifies that this axis takes js unix timestamps (milliseconds)
-              type: 'datetime',
+              type: 'line',
             },
             yAxis: {
               title: {
@@ -63,10 +70,9 @@
       });*/
     </script>
     </header>
-    <body>
-      <!-- div where the graph gets put-->
-      <div class="container" id="container" style="width:800px; height:400px; margin-left:auto; margin-right:auto;">
-    </div>
+    <body> <!-- div where the graph gets put-->
+      <div class="hero-unit header" style="width:800px; height:100px; margin-left:auto; margin-right:auto; text-align:center;"><h1>Lab Metrics</h1></div>
+      <div class="hero-unit container" id="container" style="width:800px; height:400px; margin-left:auto; margin-right:auto;"></div>
   </body>
   <footer>
   </footer>
