--- a/test_site.html
+++ b/test_site.html
@@ -19,6 +19,10 @@
       {
         background-color:#76766e;
       }
+      body
+      {
+        background-image:url('light_alu/light_alu.png');
+      }
     </style>
     <script>
         // makes an array for our data to go in
