Request the php file to act as middle man for the json

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         // makes an array for our data to go in
         var dataarray = [];
         // grabs the data file
-        $.get('data.json',function(data){
+        $.get('data.php',function(data){
           var lines = data.rows;
           // grab each line & make datapoint
           for(var i=0; i<lines.length;i++){
